<resources>
    <string name="app_name">Get Tally</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_qr_code">GENERATE QR CODE \n FOR YOUR DEBIT CARD</string>
    <string name="pay_with_ease">Pay with Ease\t</string>
    <string name="qr_for_card">GENERATE QR FOR CARD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="merchant_locator">MERCHANT LOCATOR</string>
    <string name="enter_card_deatils">ENTER CARD DETAILS</string>
    <string name="your_card_details_is_never_stored">Your Card Details is Never Stored</string>
    <string name="your_login_password">SIGN UP HERE</string>
    <string name="note_this_is_not_your_cars_pin">NOTE: This is not your Card Pin but the password to your tally account</string>
    <string name="create_qr">CREATE QR</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_email">Enter username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_password">Enter password</string>
    <string name="transactions">Transactions</string>
    <string name="qr_code">QR Code</string>
    <string name="my_tally">My Tally</string>
    <string name="merchants">Merchants</string>
    <string name="see_all">See all</string>
    <string name="seven_days">7 days</string>
    <string name="thirty_days">30 days</string>
    <string name="timeOut">Time Out</string>

    <string name="all_please_account_number">Please enter destination account number</string>
    <string name="all_please_account_name">Please enter destination account name</string>
    <string name="all_please_confirm_password">Please Confirm Your Password</string>
    <string name="all_password_mismatch">Password mismatch</string>
    <string name="all_phone_number">Incorrect phone number</string>
    <string name="all_please_enter_password">Please Enter Your Password</string>
    <string name="all_please_enter_full_name">Please Enter Your Full Name</string>
    <string name="all_please_enter_email">Please Enter Your Email</string>
    <string name="all_please_enter_mobile_no">Please Enter Your Phone number</string>
    <string name="all_please_full_name">Please Enter Your Name</string>
    <string name="all_please_enter_phone_number">Please Enter Your Phone Number</string>
    <string name="all_please_enter_issuing_bank">Please Select Your Issuing Bank</string>
    <string name="all_please_enter_amount">Please Enter Your amount</string>
    <string name="all_please_enter_issuing_card_scheme">Please Select Your Card Scheme</string>
    <string name="all_please_enter_card_expiry_number">Please Enter Your Card Expiry Number</string>
    <string name="all_please_enter_card_date">Please Enter Your Card Date</string>
    <string name="all_please_enter_card_cvv">Please Enter Your Card CVV</string>
    <string name="all_please_your_consent">"Please your consent is needed to proceed"</string>
    <string name="enter_pin">Enter Card Pin</string>

    <string name="btn_cal_0">0</string>
    <string name="btn_cal_1">1</string>
    <string name="btn_cal_2">2</string>
    <string name="btn_cal_3">3</string>
    <string name="btn_cal_4">4</string>
    <string name="btn_cal_5">5</string>
    <string name="btn_cal_6">6</string>
    <string name="btn_cal_7">7</string>
    <string name="btn_cal_8">8</string>
    <string name="btn_cal_9">9</string>
    <string name="btn_esc">Esc</string>
    <string name="btn_confirm">Confirm</string>

    <string name="pin_too_short">Pin too short</string>
    <string name="max_input">Maximum input reached</string>
    <string name="cancel">Cancel</string>
    <string name="send_receipt_as_message">Send Receipt as message</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="transaction_receipt">Transaction Receipt</string>

    <string name="message_place_holder">Message:   %1$s</string>
    <string name="merchant_name_place_holder">Merchant:   %1$s</string>
    <string name="terminal_id_place_holder">Terminal Id:   %1$s</string>
    <string name="qr_purchase">QR PURCHASE</string>
    <string name="date_time_place_holder">DATE/TIME: %1$s</string>
    <string name="amount_place_holder">Amount:   %1$S</string>
    <string name="order_id_place_holder">Order Id: %1$s</string>
    <string name="source_account_place_holder">Source Account: %1$s</string>
    <string name="narration_place_holder">Narration: %1$s</string>
    <string name="beneficiary_account_place_holder">Beneficiary Account: %1$s</string>
    <string name="card_owner_place_holder">Card Owner: %1$s</string>
    <string name="beneficiary_place_holder">Beneficiary: %1$s</string>
    <string name="response_code_place_holder">Response Code:   %1$s</string>
    <string name="transaction_place_holder">Transaction Id: %1$s</string>
    <string name="app_version_place_holder"><![CDATA[App Version:   %1$s]]></string>
    <string name="powered_by_netplus">Powered by NetPlus</string>
    <string name="transaction_status_place_holder">TRANSACTION   %1$s</string>
    <string name="trans_ref_place_holder">TRANS REF:   %1$s</string>

    <string name="contact_us">Contact Us:</string>
    <string name="netplus_address">4, Hakeem Dickson Drive, Off TF, Kuboye Street, Oniru, Lagos</string>
    <string name="receipt_footer_message">4, Hakeem Dickson Drive, Off TF, Kuboye Street, Oniru, Lagos \nEmail: info@netplusdotcom.com \nTel: +234 818 778 2542, +234 809 999 0660</string>
    <string name="email_info_netplusdotcom_com">Email: info@netplusdotcom.com</string>
    <string name="netplus_phone_number">Tel: +234 818 778 2542, +234 809 999 0660</string>
    <string name="an_error_occurred">An error occurred</string>


    <string name="verify">Verify</string>
    <string name="otp_here">Enter the OTP sent to you Here…</string>
    <string name="resend_code">Didn\'t Receive Code? Resend it</string>
    <string name="otp_resent">A fresh OTP has been sent to you…</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_referral">Confirm Referral (optional)</string>
    <string name="you_will_be_charged_a_fee_of_n100">You will be charged a fee of 100</string>
    <string name="i_understand_that_my_pin_protects_transactions_and_my_card_details_are_never_stored">I understand that my pin protects transactions and my card details are never stored.</string>

</resources>