<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/transaction_receipt_bg"
        android:padding="@dimen/dimen_20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tally_logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/transaction_receipt"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />


        <TextView
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/date_time_place_holder"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/trans_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/amount_place_holder"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/date_time"
            app:layout_constraintTop_toBottomOf="@+id/date_time" />

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/order_id_place_holder"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/trans_amount"
            app:layout_constraintTop_toBottomOf="@+id/trans_amount" />

        <TextView
            android:id="@+id/narration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/narration_place_holder"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/order_id"
            app:layout_constraintTop_toBottomOf="@+id/order_id" />

        <TextView
            android:id="@+id/card_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/transaction_place_holder"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/narration"
            app:layout_constraintTop_toBottomOf="@+id/narration" />

        <TextView
            android:id="@+id/trans_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/card_owner_place_holder"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/card_owner"
            app:layout_constraintTop_toBottomOf="@+id/card_owner" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/transaction_status_place_holder"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trans_id"
            tools:text="TRANSACTION APPROVED" />

        <TextView
            android:id="@+id/response_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/response_code_place_holder"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/trans_id"
            app:layout_constraintTop_toBottomOf="@+id/status" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/message_place_holder"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/response_code"
            app:layout_constraintTop_toBottomOf="@+id/response_code" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_version_place_holder"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/message"
            app:layout_constraintTop_toBottomOf="@+id/message"
            tools:text="WEMA 1.1.129" />

        <TextView
            android:id="@+id/powered_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/powered_by_netplus"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/app_version"
            app:layout_constraintTop_toBottomOf="@+id/app_version" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1dp"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/powered_by" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/contact_us"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_5dp"
            android:text="@string/receipt_footer_message"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>